--- a/config.json
+++ b/config.json
@@ -556,6 +556,238 @@
     {
       "ip": "192.168.124.251",
       "mac": "6E:FB:18:4D:9C:3E"
+    },
+    {
+      "ip": "30.240.101.1",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.2",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.3",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.4",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.5",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.6",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.7",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.8",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.9",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.10",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.11",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.12",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.13",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.14",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.15",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.16",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.17",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.18",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.19",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.20",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.21",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.22",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.23",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.24",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.25",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.26",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.27",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.28",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.29",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.30",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.31",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.32",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.33",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.34",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.35",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.36",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.37",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.38",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.39",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.40",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.41",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.42",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.43",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.45",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.47",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.50",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.51",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.52",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.53",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.54",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.55",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.56",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.57",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.59",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.101",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.169",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.101.237",
+      "mac": "FA:EB:D8:27:64:53"
+    },
+    {
+      "ip": "30.240.101.240",
+      "mac": "0:0:0:0:4:0"
     }
   ]
 }
