--- a/config.json
+++ b/config.json
@@ -1,1 +1,207 @@
-{"progress_time_stamp":"1766571511705","block_hosts":[{"filter_host":"bilibili.com","filter_match_rule":"","filter_start_time":"00:00","filter_end_time":"23:59","filter_weekday":[1,2,3,4,5,6,7],"filter_mac":"6E:FB:18:4D:9C:3E"},{"filter_host":"doubao.com","filter_match_rule":"","filter_start_time":"00:00","filter_end_time":"23:59","filter_weekday":[1,2,3,4,5,6,7],"filter_mac":"6E:FB:18:4D:9C:3E"},{"filter_host":"dburl.net","filter_match_rule":"","filter_start_time":"00:00","filter_end_time":"23:59","filter_weekday":[1,2,3,4,5,6,7],"filter_mac":"6E:FB:18:4D:9C:3E"},{"filter_host":"baidu.com","filter_match_rule":"","filter_start_time":"00:00","filter_end_time":"23:59","filter_weekday":[1,2,3,4,5,6,7],"filter_mac":"6E:FB:18:4D:9C:3E"},{"filter_host":"youtube.com","filter_match_rule":"^https?:\\/\\/(www|s)\\.youtube\\.com\\/(pagead|ptracking)","filter_start_time":"00:00","filter_end_time":"23:59","filter_weekday":[1,2,3,4,5,6,7]},{"filter_host":"youtube.com","filter_match_rule":"^https?:\\/\\/s\\.youtube\\.com\\/api\\/stats\\/qoe\\?adcontext","filter_start_time":"00:00","filter_end_time":"23:59","filter_weekday":[1,2,3,4,5,6,7]},{"filter_host":"youtube.com","filter_match_rule":"^https?:\\/\\/(www|s)\\.youtube\\.com\\/api\\/stats\\/ads","filter_start_time":"00:00","filter_end_time":"23:59","filter_weekday":[1,2,3,4,5,6,7]},{"filter_host":"googlevideo.com","filter_match_rule":"^https?:\\/\\/[\\w-]+\\.googlevideo\\.com\\/(?!(dclk_video_ads|videoplayback\\?)).+&oad","filter_start_time":"00:00","filter_end_time":"23:59","filter_weekday":[1,2,3,4,5,6,7]}],"proxy_port":8001,"web_interface_port":8002,"vpn_proxy":"","devices":[{"ip":"192.168.124.1","mac":"66:65:A3:5A:D7:8C"},{"ip":"192.168.124.2","mac":"7C:DE:78:A9:83:A0"},{"ip":"192.168.124.3","mac":"0:DD:B6:EA:E6:2A"},{"ip":"192.168.124.6","mac":"0:DD:B6:EB:26:5C"},{"ip":"192.168.124.20","mac":"DC:97:58:D:FD:9F"},{"ip":"192.168.124.36","mac":"DE:1E:87:ED:17:8B"},{"ip":"192.168.124.55","mac":"E2:4D:6E:1:21:6E"},{"ip":"192.168.124.99","mac":"8E:29:87:27:DE:40"},{"ip":"192.168.124.111","mac":"74:3F:C2:67:74:98"},{"ip":"192.168.124.117","mac":"48:F3:F3:CA:1D:E"},{"ip":"192.168.124.118","mac":"D2:9E:8D:1B:F1:4E"},{"ip":"192.168.124.147","mac":"46:44:38:60:23:5A"},{"ip":"192.168.124.151","mac":"14:C0:50:14:6E:A5"},{"ip":"192.168.124.200","mac":"54:52:84:95:DF:5E"},{"ip":"192.168.124.211","mac":"F4:3C:3B:77:E:AE"},{"ip":"192.168.124.229","mac":"D6:A0:61:69:67:F6"},{"ip":"192.168.124.240","mac":"F4:6B:8C:90:29:5"},{"ip":"192.168.124.132","mac":"7A:25:CF:6B:59:E0"},{"ip":"192.168.124.10","mac":"BE:50:23:BF:D8:66"},{"ip":"192.168.124.227","mac":"48:38:B6:46:F8:BD"},{"ip":"192.168.124.138","mac":"D2:F5:D9:5:8D:CE"},{"ip":"192.168.124.128","mac":"A:2A:29:FC:35:F0"},{"ip":"192.168.124.204","mac":"1E:D7:B9:A4:FE:E8"},{"ip":"192.168.124.37","mac":"DE:1E:87:ED:17:8B"},{"ip":"192.168.124.65","mac":"E2:AC:EB:15:83:79"},{"ip":"192.168.124.70","mac":"B2:52:A8:BC:1D:75"},{"ip":"192.168.124.212","mac":"D2:E9:D1:F8:CE:ED"},{"ip":"192.168.124.54","mac":"E2:4D:6E:1:21:6E"},{"ip":"192.168.124.178","mac":"5A:4D:3:E5:65:F7"},{"ip":"192.168.124.149","mac":"14:C0:50:14:6E:A5"},{"ip":"30.240.102.2","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.3","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.4","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.5","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.6","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.7","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.8","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.9","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.10","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.11","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.12","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.13","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.14","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.15","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.16","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.17","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.18","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.63","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.75","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.140","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.147","mac":"FA:EB:D8:27:64:53"},{"ip":"30.240.102.24","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.29","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.36","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.198","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.216","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.20","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.23","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.43","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.21","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.22","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.25","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.26","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.27","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.28","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.30","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.31","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.32","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.35","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.37","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.38","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.39","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.40","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.41","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.19","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.33","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.34","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.42","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.45","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.46","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.47","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.48","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.49","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.50","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.51","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.52","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.53","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.54","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.44","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.55","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.56","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.57","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.58","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.59","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.60","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.61","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.62","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.64","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.65","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.66","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.67","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.68","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.69","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.84","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.87","mac":"0:0:0:0:4:0"},{"ip":"30.240.102.89","mac":"0:0:0:0:4:0"},{"ip":"192.168.124.251","mac":"6E:FB:18:4D:9C:3E"},{"ip":"30.240.101.1","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.2","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.3","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.4","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.5","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.6","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.7","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.8","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.9","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.10","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.11","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.12","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.13","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.14","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.15","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.16","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.17","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.18","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.19","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.20","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.21","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.22","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.23","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.24","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.25","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.26","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.27","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.28","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.29","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.30","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.31","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.32","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.33","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.34","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.35","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.36","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.37","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.38","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.39","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.40","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.41","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.42","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.43","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.45","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.47","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.50","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.51","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.52","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.53","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.54","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.55","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.56","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.57","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.59","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.101","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.169","mac":"0:0:0:0:4:0"},{"ip":"30.240.101.237","mac":"FA:EB:D8:27:64:53"},{"ip":"30.240.101.240","mac":"0:0:0:0:4:0"}]}
+{
+  "network_scanning_status": "0",
+  "progress_time_stamp": "1766571511705",
+  "block_hosts": [
+    {
+      "filter_host": "bilibili.com",
+      "filter_match_rule": "",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ],
+      "filter_mac": "6E:FB:18:4D:9C:3E"
+    },
+    {
+      "filter_host": "doubao.com",
+      "filter_match_rule": "",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ],
+      "filter_mac": "6E:FB:18:4D:9C:3E"
+    },
+    {
+      "filter_host": "dburl.net",
+      "filter_match_rule": "",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ],
+      "filter_mac": "6E:FB:18:4D:9C:3E"
+    },
+    {
+      "filter_host": "baidu.com",
+      "filter_match_rule": "",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ],
+      "filter_mac": "6E:FB:18:4D:9C:3E"
+    },
+    {
+      "filter_host": "youtube.com",
+      "filter_match_rule": "^https?:\\/\\/(www|s)\\.youtube\\.com\\/(pagead|ptracking)",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ]
+    },
+    {
+      "filter_host": "youtube.com",
+      "filter_match_rule": "^https?:\\/\\/s\\.youtube\\.com\\/api\\/stats\\/qoe\\?adcontext",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ]
+    },
+    {
+      "filter_host": "youtube.com",
+      "filter_match_rule": "^https?:\\/\\/(www|s)\\.youtube\\.com\\/api\\/stats\\/ads",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ]
+    },
+    {
+      "filter_host": "googlevideo.com",
+      "filter_match_rule": "^https?:\\/\\/[\\w-]+\\.googlevideo\\.com\\/(?!(dclk_video_ads|videoplayback\\?)).+&oad",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ]
+    }
+  ],
+  "proxy_port": 8001,
+  "web_interface_port": 8002,
+  "vpn_proxy": "",
+  "devices": [
+    {
+      "ip": "192.168.124.1",
+      "mac": "66:65:A3:5A:D7:8C"
+    },
+    {
+      "ip": "192.168.124.2",
+      "mac": "7C:DE:78:A9:83:A0"
+    },
+    {
+      "ip": "192.168.124.3",
+      "mac": "0:DD:B6:EA:E6:2A"
+    },
+    {
+      "ip": "192.168.124.6",
+      "mac": "0:DD:B6:EB:26:5C"
+    },
+    {
+      "ip": "192.168.124.20",
+      "mac": "DC:97:58:D:FD:9F"
+    },
+    {
+      "ip": "192.168.124.37",
+      "mac": "DE:1E:87:ED:17:8B"
+    },
+    {
+      "ip": "192.168.124.54",
+      "mac": "D2:59:C1:C2:C0:B5"
+    },
+    {
+      "ip": "192.168.124.111",
+      "mac": "74:3F:C2:67:74:98"
+    },
+    {
+      "ip": "192.168.124.117",
+      "mac": "48:F3:F3:CA:1D:E"
+    },
+    {
+      "ip": "192.168.124.149",
+      "mac": "14:C0:50:14:6E:A5"
+    },
+    {
+      "ip": "192.168.124.181",
+      "mac": "9A:8A:4A:A5:C8:C7"
+    },
+    {
+      "ip": "192.168.124.200",
+      "mac": "54:52:84:95:DF:5E"
+    },
+    {
+      "ip": "192.168.124.210",
+      "mac": "F4:3C:3B:77:E:AE"
+    },
+    {
+      "ip": "192.168.124.212",
+      "mac": "D2:E9:D1:F8:CE:ED"
+    },
+    {
+      "ip": "192.168.124.229",
+      "mac": "D6:A0:61:69:67:F6"
+    },
+    {
+      "ip": "192.168.124.240",
+      "mac": "F4:6B:8C:90:29:5"
+    },
+    {
+      "ip": "192.168.124.251",
+      "mac": "6E:FB:18:4D:9C:3E"
+    },
+    {
+      "ip": "192.168.124.255",
+      "mac": "FF:FF:FF:FF:FF:FF"
+    }
+  ]
+}
