--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dev": "BLOCK_PROXY_DEV=1 npm run express",
     "start": "npm run cp && npx pm2 start ecosystem.config.js",
     "express": "npm run cp && node ./server/express.js",
-    "proxy": "npm run cp && node proxy/start.js",
+    "proxy": "npm run cp && node ./proxy/start.js",
     "build": "react-scripts build",
     "docker:build": "npm run build && docker build -t block-proxy .",
     "docker:build_arm": "npm run build && docker buildx build --platform linux/arm64/v8 -t block-proxy .",
