--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "https-proxy-agent": "^7.0.6",
     "ping": "^1.0.0",
     "pm2": "^6.0.14",
-    "proper-lockfile": "^4.1.2"
+    "write-file-atomic": "^7.0.0"
   },
   "browserslist": {
     "production": [
