--- a/Caddyfile
+++ b/Caddyfile
@@ -1,20 +1,12 @@
-# 监听所有接口的 12345 端口
-:12345 {
-    # 可选：添加基本认证以限制访问
-    # 如果你不需要认证，可以注释掉或删除以下 block
-    # basic_auth {
-    #     admin $2a$14$TzL7qrw.E4ZZaO7Wz2M.Ye7fB0.L0tN7yqQ2M6t0e1p5u4v3r2s1t # admin:123456
-    # }
 
-    # 使用 forward_proxy 模块提供 HTTP/HTTPS 代理功能
-    forward_proxy {
-        # 允许代理到任何主机和端口
-        # 注意：这使得代理完全开放，存在滥用风险
-        hide_ip
-        hide_via
-        probe_resistance # 可选：增加探测难度
-    }
+#basic_auth admin bcrypt:$2a$14$TzL7qrw.E4ZZaO7Wz2M.Ye7fB0.L0tN7yqQ2M6t0e1p5u4v3r2s1t
 
-    # 确保所有请求都由 forward_proxy 处理
-    # 不需要 reverse_proxy
+
+:8004 {
+  forward_proxy {
+    # 仅指定允许连接的目标端口范围（可选，但推荐设置）
+    # 这里允许常见的 HTTP (80) 和 HTTPS (443) 端口
+  }
+  # 注意：这里没有 reverse_proxy 或其他指令
+  # forward_proxy 会直接处理代理请求
 }
