--- a/config.json
+++ b/config.json
@@ -1,3 +1,72 @@
 {
-  "network_scanning_status": "1"
+  "network_scanning_status": "1",
+  "block_hosts": [],
+  "proxy_port": 8001,
+  "web_interface_port": 8002,
+  "devices": [
+    {
+      "ip": "192.168.124.1",
+      "mac": "66:65:A3:5A:D7:8C"
+    },
+    {
+      "ip": "192.168.124.2",
+      "mac": "7C:DE:78:A9:83:A0"
+    },
+    {
+      "ip": "192.168.124.3",
+      "mac": "0:DD:B6:EA:E6:2A"
+    },
+    {
+      "ip": "192.168.124.6",
+      "mac": "0:DD:B6:EB:26:5C"
+    },
+    {
+      "ip": "192.168.124.20",
+      "mac": "DC:97:58:D:FD:9F"
+    },
+    {
+      "ip": "192.168.124.37",
+      "mac": "DE:1E:87:ED:17:8B"
+    },
+    {
+      "ip": "192.168.124.53",
+      "mac": "E2:4D:6E:1:21:6E"
+    },
+    {
+      "ip": "192.168.124.111",
+      "mac": "74:3F:C2:67:74:98"
+    },
+    {
+      "ip": "192.168.124.117",
+      "mac": "48:F3:F3:CA:1D:E"
+    },
+    {
+      "ip": "192.168.124.181",
+      "mac": "9A:8A:4A:A5:C8:C7"
+    },
+    {
+      "ip": "192.168.124.200",
+      "mac": "54:52:84:95:DF:5E"
+    },
+    {
+      "ip": "192.168.124.210",
+      "mac": "F4:3C:3B:77:E:AE"
+    },
+    {
+      "ip": "192.168.124.212",
+      "mac": "D2:E9:D1:F8:CE:ED"
+    },
+    {
+      "ip": "192.168.124.229",
+      "mac": "D6:A0:61:69:67:F6"
+    },
+    {
+      "ip": "192.168.124.240",
+      "mac": "F4:6B:8C:90:29:5"
+    },
+    {
+      "ip": "192.168.124.251",
+      "mac": "6E:FB:18:4D:9C:3E"
+    }
+  ]
 }
