--- a/config.json
+++ b/config.json
@@ -141,15 +141,15 @@
     },
     {
       "ip": "192.168.124.3",
-      "mac": "00:DD:B6:EA:E6:2A"
+      "mac": "0:DD:B6:EA:E6:2A"
     },
     {
       "ip": "192.168.124.6",
-      "mac": "00:DD:B6:EB:26:5C"
+      "mac": "0:DD:B6:EB:26:5C"
     },
     {
       "ip": "192.168.124.20",
-      "mac": "DC:97:58:0D:FD:9F"
+      "mac": "DC:97:58:D:FD:9F"
     },
     {
       "ip": "192.168.124.37",
@@ -165,7 +165,7 @@
     },
     {
       "ip": "192.168.124.117",
-      "mac": "48:F3:F3:CA:1D:0E"
+      "mac": "48:F3:F3:CA:1D:E"
     },
     {
       "ip": "192.168.124.149",
@@ -181,7 +181,7 @@
     },
     {
       "ip": "192.168.124.210",
-      "mac": "F4:3C:3B:77:0E:AE"
+      "mac": "F4:3C:3B:77:E:AE"
     },
     {
       "ip": "192.168.124.212",
@@ -193,7 +193,7 @@
     },
     {
       "ip": "192.168.124.240",
-      "mac": "F4:6B:8C:90:29:05"
+      "mac": "F4:6B:8C:90:29:5"
     },
     {
       "ip": "192.168.124.251",
@@ -202,14 +202,6 @@
     {
       "ip": "192.168.124.255",
       "mac": "FF:FF:FF:FF:FF:FF"
-    },
-    {
-      "ip": "192.168.1.1",
-      "mac": "30:A1:76:97:96:4A"
-    },
-    {
-      "ip": "192.168.124.53",
-      "mac": "E2:4D:6E:01:21:6E"
     }
   ]
 }
