--- a/config.json
+++ b/config.json
@@ -1,207 +1,228 @@
 {
   "network_scanning_status": "1",
-  "progress_time_stamp": "1766571511705",
-  "block_hosts": [
-    {
-      "filter_host": "bilibili.com",
-      "filter_match_rule": "",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ],
-      "filter_mac": "6E:FB:18:4D:9C:3E"
-    },
-    {
-      "filter_host": "doubao.com",
-      "filter_match_rule": "",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ],
-      "filter_mac": "6E:FB:18:4D:9C:3E"
-    },
-    {
-      "filter_host": "dburl.net",
-      "filter_match_rule": "",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ],
-      "filter_mac": "6E:FB:18:4D:9C:3E"
-    },
-    {
-      "filter_host": "baidu.com",
-      "filter_match_rule": "",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ],
-      "filter_mac": "6E:FB:18:4D:9C:3E"
-    },
-    {
-      "filter_host": "youtube.com",
-      "filter_match_rule": "^https?:\\/\\/(www|s)\\.youtube\\.com\\/(pagead|ptracking)",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "youtube.com",
-      "filter_match_rule": "^https?:\\/\\/s\\.youtube\\.com\\/api\\/stats\\/qoe\\?adcontext",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "youtube.com",
-      "filter_match_rule": "^https?:\\/\\/(www|s)\\.youtube\\.com\\/api\\/stats\\/ads",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "googlevideo.com",
-      "filter_match_rule": "^https?:\\/\\/[\\w-]+\\.googlevideo\\.com\\/(?!(dclk_video_ads|videoplayback\\?)).+&oad",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    }
-  ],
+  "block_hosts": [],
   "proxy_port": 8001,
   "web_interface_port": 8002,
-  "vpn_proxy": "",
   "devices": [
     {
-      "ip": "192.168.124.1",
-      "mac": "66:65:A3:5A:D7:8C"
+      "ip": "30.240.127.1",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.2",
-      "mac": "7C:DE:78:A9:83:A0"
+      "ip": "30.240.127.2",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.3",
-      "mac": "0:DD:B6:EA:E6:2A"
+      "ip": "30.240.127.3",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.6",
-      "mac": "0:DD:B6:EB:26:5C"
+      "ip": "30.240.127.4",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.20",
-      "mac": "DC:97:58:D:FD:9F"
+      "ip": "30.240.127.5",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.37",
-      "mac": "DE:1E:87:ED:17:8B"
+      "ip": "30.240.127.6",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.54",
-      "mac": "D2:59:C1:C2:C0:B5"
+      "ip": "30.240.127.7",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.111",
-      "mac": "74:3F:C2:67:74:98"
+      "ip": "30.240.127.8",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.117",
-      "mac": "48:F3:F3:CA:1D:E"
+      "ip": "30.240.127.9",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.149",
-      "mac": "14:C0:50:14:6E:A5"
+      "ip": "30.240.127.10",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.181",
-      "mac": "9A:8A:4A:A5:C8:C7"
+      "ip": "30.240.127.11",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.200",
-      "mac": "54:52:84:95:DF:5E"
+      "ip": "30.240.127.12",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.210",
-      "mac": "F4:3C:3B:77:E:AE"
+      "ip": "30.240.127.13",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.212",
-      "mac": "D2:E9:D1:F8:CE:ED"
+      "ip": "30.240.127.14",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.229",
-      "mac": "D6:A0:61:69:67:F6"
+      "ip": "30.240.127.15",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.240",
-      "mac": "F4:6B:8C:90:29:5"
+      "ip": "30.240.127.16",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.251",
-      "mac": "6E:FB:18:4D:9C:3E"
+      "ip": "30.240.127.17",
+      "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "192.168.124.255",
-      "mac": "FF:FF:FF:FF:FF:FF"
+      "ip": "30.240.127.18",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.19",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.20",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.21",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.22",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.23",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.24",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.25",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.26",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.27",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.28",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.29",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.30",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.31",
+      "mac": "56:0:FD:CC:FF:B2"
+    },
+    {
+      "ip": "30.240.127.32",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.33",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.34",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.35",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.36",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.37",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.38",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.39",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.40",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.41",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.42",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.43",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.44",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.45",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.46",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.47",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.48",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.49",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.50",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.51",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.52",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.53",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.54",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.55",
+      "mac": "0:0:0:0:4:0"
     }
   ]
 }
