--- a/config.json
+++ b/config.json
@@ -1,8 +1,6 @@
 {
   "network_scanning_status": "1",
   "progress_time_stamp": "1766571511705",
-  "auth_username":"",
-  "auth_password":"",
   "block_hosts": [
     {
       "filter_host": "bilibili.com",
@@ -132,6 +130,8 @@
   "proxy_port": 8001,
   "web_interface_port": 8002,
   "vpn_proxy": "",
+  "auth_username": "",
+  "auth_password": "",
   "devices": [
     {
       "ip": "192.168.124.1",
@@ -204,6 +204,154 @@
     {
       "ip": "192.168.124.255",
       "mac": "FF:FF:FF:FF:FF:FF"
+    },
+    {
+      "ip": "30.240.127.1",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.2",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.3",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.4",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.5",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.6",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.8",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.9",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.10",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.11",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.13",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.16",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.21",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.22",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.26",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.28",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.31",
+      "mac": "56:0:FD:CC:FF:B2"
+    },
+    {
+      "ip": "30.240.127.33",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.34",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.7",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.12",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.14",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.15",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.17",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.18",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.19",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.23",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.24",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.25",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.27",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.29",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.30",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.35",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.36",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.38",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.39",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.41",
+      "mac": "0:0:0:0:4:0"
     }
   ]
 }
