--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "network_scanning_status": "1",
-  "progress_time_stamp": "1766721807618",
+  "network_scanning_status": "0",
+  "progress_time_stamp": "1766571511705",
   "block_hosts": [
     {
       "filter_host": "bilibili.com",
@@ -79,7 +79,8 @@
         5,
         6,
         7
-      ]
+      ],
+      "compiledFilterRegexp": {}
     },
     {
       "filter_host": "youtube.com",
@@ -94,7 +95,8 @@
         5,
         6,
         7
-      ]
+      ],
+      "compiledFilterRegexp": {}
     },
     {
       "filter_host": "youtube.com",
@@ -109,7 +111,8 @@
         5,
         6,
         7
-      ]
+      ],
+      "compiledFilterRegexp": {}
     },
     {
       "filter_host": "googlevideo.com",
@@ -124,7 +127,8 @@
         5,
         6,
         7
-      ]
+      ],
+      "compiledFilterRegexp": {}
     }
   ],
   "proxy_port": 8001,
@@ -230,6 +234,10 @@
       "mac": "0:0:0:0:4:0"
     },
     {
+      "ip": "30.240.127.7",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
       "ip": "30.240.127.8",
       "mac": "0:0:0:0:4:0"
     },
@@ -246,47 +254,11 @@
       "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "30.240.127.13",
-      "mac": "0:0:0:0:4:0"
-    },
-    {
-      "ip": "30.240.127.16",
-      "mac": "0:0:0:0:4:0"
-    },
-    {
-      "ip": "30.240.127.21",
-      "mac": "0:0:0:0:4:0"
-    },
-    {
-      "ip": "30.240.127.22",
-      "mac": "0:0:0:0:4:0"
-    },
-    {
-      "ip": "30.240.127.26",
-      "mac": "0:0:0:0:4:0"
-    },
-    {
-      "ip": "30.240.127.28",
-      "mac": "0:0:0:0:4:0"
-    },
-    {
-      "ip": "30.240.127.31",
-      "mac": "56:0:FD:CC:FF:B2"
-    },
-    {
-      "ip": "30.240.127.33",
-      "mac": "0:0:0:0:4:0"
-    },
-    {
-      "ip": "30.240.127.34",
-      "mac": "0:0:0:0:4:0"
-    },
-    {
-      "ip": "30.240.127.7",
-      "mac": "0:0:0:0:4:0"
-    },
-    {
       "ip": "30.240.127.12",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.13",
       "mac": "0:0:0:0:4:0"
     },
     {
@@ -295,6 +267,10 @@
     },
     {
       "ip": "30.240.127.15",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.16",
       "mac": "0:0:0:0:4:0"
     },
     {
@@ -310,6 +286,18 @@
       "mac": "0:0:0:0:4:0"
     },
     {
+      "ip": "30.240.127.20",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.21",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.22",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
       "ip": "30.240.127.23",
       "mac": "0:0:0:0:4:0"
     },
@@ -322,7 +310,15 @@
       "mac": "0:0:0:0:4:0"
     },
     {
+      "ip": "30.240.127.26",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
       "ip": "30.240.127.27",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.28",
       "mac": "0:0:0:0:4:0"
     },
     {
@@ -334,11 +330,31 @@
       "mac": "0:0:0:0:4:0"
     },
     {
+      "ip": "30.240.127.31",
+      "mac": "56:0:FD:CC:FF:B2"
+    },
+    {
+      "ip": "30.240.127.32",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.33",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.34",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
       "ip": "30.240.127.35",
       "mac": "0:0:0:0:4:0"
     },
     {
       "ip": "30.240.127.36",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.37",
       "mac": "0:0:0:0:4:0"
     },
     {
@@ -350,15 +366,151 @@
       "mac": "0:0:0:0:4:0"
     },
     {
+      "ip": "30.240.127.40",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
       "ip": "30.240.127.41",
       "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "30.240.127.20",
+      "ip": "30.240.127.42",
       "mac": "0:0:0:0:4:0"
     },
     {
-      "ip": "30.240.127.32",
+      "ip": "30.240.127.43",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.44",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.45",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.46",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.47",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.48",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.49",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.50",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.51",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.52",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.53",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.54",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.55",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.56",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.57",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.58",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.59",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.60",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.61",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.63",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.64",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.66",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.67",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.68",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.73",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.75",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.76",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.78",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.79",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.80",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.81",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.84",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.62",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.127.82",
       "mac": "0:0:0:0:4:0"
     }
   ]
