--- a/config.json
+++ b/config.json
@@ -512,6 +512,14 @@
     {
       "ip": "30.240.127.82",
       "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "192.168.124.53",
+      "mac": "E2:4D:6E:1:21:6E"
+    },
+    {
+      "ip": "192.168.124.211",
+      "mac": "D2:E9:D1:F8:CE:ED"
     }
   ]
 }
